--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
-		%sveltekit.head%
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+<html lang="fr">
+
+<head>
+	<meta charset="utf-8" />
+	<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="%sveltekit.assets%/android-chrome-192x192.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png">
+	<link rel="manifest" href="%sveltekit.assets%/site.webmanifest">
+	<link rel="mask-icon" href="%sveltekit.assets%/safari-pinned-tab.svg" color="#93c045">
+	<meta name="apple-mobile-web-app-title" content="Thoanny">
+	<meta name="application-name" content="Thoanny">
+	<meta name="msapplication-TileColor" content="#93c045">
+	<meta name="msapplication-TileImage" content="%sveltekit.assets%/mstile-144x144.png">
+	<meta name="theme-color" content="#93c045">
+	<meta name="viewport" content="width=device-width" />
+	%sveltekit.head%
+</head>
+
+<body data-sveltekit-preload-data="hover">
+	<div style="display: contents">%sveltekit.body%</div>
+</body>
+
 </html>
